# nbt-parser

./: Cargo.toml  README.md  bigtest.nbt  test.nbt
src/: lib.rs  main.rs
